# tauri-mim

./: .gitignore  Cargo.toml  package-lock.json  package.json
src/: App.jsx
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/src/: main.rs
