[package]
name = "mim"
description = "A bittorent client"
version = "1.0.0"
authors = ["Fahim Ahmed"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
flate2 = "1.0.24"
libmim = {path="./libmim", default-features=false}
dht = {path="./dht"}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
anyhow = "1"
clap = {version = "4", features = ["derive"]}
log = "0.4"
pretty_env_logger = "0.4"
regex = "1"
futures = "0.3"
parse_duration = "2"
reqwest = "*"
serde = {version = "1", features=["derive"]}
serde_json = "1"
size_format = "1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
default = ["sha1-system", "default-tls"]
sha1-system = ["libmim/sha1-system"]
sha1-openssl = ["libmim/sha1-openssl"]
sha1-rust = ["libmim/sha1-rust"]
default-tls = ["libmim/default-tls"]
rust-tls = ["libmim/rust-tls"]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
flate2 = "1.0.24"
libmim = {path="../libmim", default-features=false}
dht = {path="../dht"}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.4"
regex = "1"
futures = "0.3"
parse_duration = "2"
reqwest = "*"
serde = {version = "1", features=["derive"]}
serde_json = "1"
size_format = "1"

[dev-dependencies]
futures = {version = "0.3"}
